--- a/src/app/pages/login/login.page.scss
+++ b/src/app/pages/login/login.page.scss
@@ -40,15 +40,16 @@
   }
 
   .panel-title {
-    font-size: 16px;
-    font-weight: 500;
+    font-size: 2.1rem;
+    font-weight: 800;
     color: ion-text-title;
     margin: 0 0 8px;
   }
 
   .panel-description {
-    font-size: 13px;
+    font-size: 0.9rem;
     font-weight: 400;
+    align-items: center;
     color: ion-border-color;
     line-height: 1.5;
     margin: 0;
@@ -76,7 +77,7 @@
 
 .header-section {
   .title-text {
-    font-size: 28px;
+    font-size: 2.8rem;
     font-weight: 800;
     color: ion-text-color;
     margin-bottom: 4px;
@@ -84,7 +85,7 @@
 }
 
 .login-subtext {
-  font-size: 13px;
+  font-size: 1rem;
   font-weight: 700;
   color: ion-text-color-step-300;
   margin-top: 6px;
@@ -95,7 +96,7 @@
   text-align: left;
 
   .field-label {
-    font-size: 13px;
+    font-size: 0.9rem;
     font-weight: 700;
     margin-bottom: 8px;
     color: ion-color-primary;
@@ -108,6 +109,7 @@
     border-radius: 12px;
     height: 52px;
     display: flex;
+    font-size: 0.8rem;
     padding: 0 15px;
 
     .native-input {
@@ -123,6 +125,7 @@
 .custom-login-button {
   background: ion-border-color !important;
   color: ion-text-color !important;
+  font-size: 1.2rem;
   width: 100%;
   max-width: 260px;
   height: 54px;
@@ -143,7 +146,7 @@
   text-align: left;
   color: #3498db;
   font-weight: 700;
-  font-size: 14px;
+  font-size: 1.1rem;
   cursor: pointer;
 }
 
@@ -151,13 +154,13 @@
   margin-top: 30px;
   .no-account-text {
     color: ion-color-primary-contrast;
-    font-size: 14px;
+    font-size: 1.7rem;
   }
 }
 
 .password-eye {
-  font-size: 20px;
-  color: #94a3b8;
+  font-size: 2.1rem;
+  color: ion-text-color-step-300;
   cursor: pointer;
   display: flex;
   align-items: center;
