--- a/src/app/pages/registro/registro.page.scss
+++ b/src/app/pages/registro/registro.page.scss
@@ -51,15 +51,15 @@
   }
 
   .panel-title {
-    font-size: 16px;
-    font-weight: 500;
+    font-size: 2.2rem;
+    font-weight: 800;
     color: ion-text-color;
     margin: 0 0 8px;
     text-align: center;
   }
 
   .panel-text {
-    font-size: 13px;
+    font-size: 0.9rem;
     font-weight: 400;
     color: ion-color-primary;
     line-height: 1.5;
@@ -86,7 +86,7 @@
 }
 
 .user-name {
-  font-size: 24px;
+  font-size: 1.6rem;
   font-weight: 800;
   color: ion-text-color;
   margin: 0;
@@ -119,7 +119,7 @@
 }
 
 .register-form .input-group .input-label {
-  font-size: 11px;
+  font-size: 0.7rem;
   font-weight: 700 !important;
   color: ion-text-color !important;
   text-transform: uppercase;
@@ -138,7 +138,7 @@
   border-radius: 12px;
   border: 1px solid #e2e8f0;
   background: ion-text-color-step-300;
-  font-size: 14px;
+  font-size: 0.9rem;
   color: ion-text-color;
   outline: none;
   width: 100%;
@@ -163,7 +163,7 @@
   padding: 16px;
   border-radius: 14px;
   font-weight: 700;
-  font-size: 15px;
+  font-size: 1.1rem;
   border: none;
   cursor: pointer;
   box-shadow: 0 4px 12px rgba(26, 61, 99, 0.2);
